--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,10 +21,13 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Push to Epitech repo
+    - name: Create a new commit and push to Epitech repo
       run: |
+        git config --global user.name "GitHub Actions"
+        git config --global user.email "actions@github.com"
         git remote add epitech https://github.com/EpitechPromo2027/B-DEV-500-NCE-5-1-area-steven.deffontaine.git
+        git add .
+        git commit -m "Deploy from GitHub Actions"
         git push epitech main --force
       env:
         GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
-
