--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,11 +22,18 @@ jobs:
       run: npm install
 
     - name: Setup SSH
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
       run: |
         mkdir -p ~/.ssh
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
+        ssh-agent -a $SSH_AUTH_SOCK > /dev/null
+        ssh-add - <<< "$SSH_PRIVATE_KEY"
         ssh-keyscan github.com >> ~/.ssh/known_hosts
+
+    - name: Debug SSH key
+      run: |
+        ls -la ~/.ssh
+        cat ~/.ssh/id_rsa
 
     - name: Push to Epitech repo
       run: |
